Begin implementing overhaul of game startup logic, improve loading, implement topological loading order for same-type dependencies, various fixes